[web] Update table layout Issue #5154 2

--- a/source/web/src/static/styles/propertyCard.less
+++ b/source/web/src/static/styles/propertyCard.less
@@ -6,6 +6,7 @@
     > h1 { color: #333; }
     > .tag { padding-right: 8px;
         img { margin-right: 8px; }
+        a { text-decoration: none; }
     }
     > .price {
         background: #f4f4f4; padding: 16px 8px; color: @red; font-size: 20px;
