--- a/source/web/src/static/styles/propertyDetails.less
+++ b/source/web/src/static/styles/propertyDetails.less
@@ -70,6 +70,7 @@
                 margin-right: 4px;
             }
             .name { display: inline-block; min-width: 6em; }
+            a { text-decoration: none; }
         }
     }
     .advantages { margin-top: 48px; margin-bottom: 48px;
